// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser Grid Block should render OneColumn 1`] = `
<DocumentFragment>
  <div
    class="css-1levw0h e1v93h7b0"
  >
    <article
      class="css-1w4vbdl ed8rouo0"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-kxq09b ed8rouo0"
      x="0"
      y="1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-1mvpedp ed8rouo0"
      x="0"
      y="2"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
               Teambesprechung vom 23.05.
            </h1>
          </header>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render ThreeColumns 1`] = `
<DocumentFragment>
  <div
    class="css-1cvxa09 e1v93h7b0"
  >
    <article
      class="css-13hhtda ed8rouo0"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-1sdku99 ed8rouo0"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-ciulb1 ed8rouo0"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
               Teambesprechung vom 23.05.
            </h1>
          </header>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-1cvxa09 e1v93h7b0"
  >
    <article
      class="css-13hhtda ed8rouo0"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-1sdku99 ed8rouo0"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-ciulb1 ed8rouo0"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
               Teambesprechung vom 23.05.
            </h1>
          </header>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="css-1cvxa09 e1v93h7b0"
  >
    <article
      class="css-13hhtda ed8rouo0"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-1sdku99 ed8rouo0"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-ciulb1 ed8rouo0"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
               Teambesprechung vom 23.05.
            </h1>
          </header>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithShowLoad 1`] = `
<DocumentFragment>
  <div
    class="css-1cvxa09 e1v93h7b0"
  >
    <article
      class="css-13hhtda ed8rouo0"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-1sdku99 ed8rouo0"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-ciulb1 ed8rouo0"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r ed8rouo1"
        >
          <img
            alt="An image description"
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
            width="500"
          />
          <header
            class="css-0 ed8rouo2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
               Teambesprechung vom 23.05.
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;
